Finishing style touches

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@iconify/svelte": "^3.0.1",
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
+    "axios": "^1.3.5",
     "prettier": "^2.8.4",
     "prettier-plugin-svelte": "^2.9.0",
     "rollup": "^2.3.4",
@@ -25,8 +26,10 @@
   "dependencies": {
     "rollup-plugin-import-css": "^3.1.0",
     "sirv-cli": "^2.0.0",
+    "svelte-notifications": "^0.9.98",
     "svelte-switch": "^0.0.5",
     "svelte-typewriter": "^3.1.4",
-    "svelte-vertical-timeline": "^1.0.0"
+    "svelte-vertical-timeline": "^1.0.0",
+    "sveltestrap": "^5.10.0"
   }
 }
