--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@iconify/icons-logos": "^1.0.12",
     "@iconify/svelte": "^3.0.1",
     "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
     "axios": "^1.3.5",
     "eslint": "^8.39.0",
