--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "rollup -c -w",
     "build": "rollup -c",
     "start": "sirv public",
-    "format": "prettier --write --plugin-search-dir=. **.js **/**/*.svelte **/*.js && eslint . --ext .js,.svelte --fix"
+    "format": "prettier --write --plugin-search-dir=. **.js **/**/*.svelte **/*.js && eslint . --ext .js,.svelte --fix",
+    "deploy": "npm run build && npx gh-pages -d public"
   },
   "devDependencies": {
     "@iconify/icons-logos": "^1.0.12",
@@ -18,6 +19,7 @@
     "eslint": "^8.39.0",
     "eslint-plugin-svelte": "^2.27.3",
     "eslint-plugin-svelte3": "^4.0.0",
+    "gh-pages": "^5.0.0",
     "prettier": "2.8.8",
     "prettier-plugin-svelte": "^2.9.0",
     "rollup": "^2.3.4",
