--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "rollup -c -w",
     "build": "rollup -c",
     "start": "sirv public",
+    "test": "npx cypress run",
     "format": "prettier --write --plugin-search-dir=. **.js **/**/*.svelte **/*.js && eslint . --ext .js,.svelte --fix",
     "deploy": "npm run build && npx gh-pages -d public"
   },
@@ -16,12 +17,14 @@
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
     "axios": "^1.3.5",
+    "cypress": "^12.13.0",
     "eslint": "^8.39.0",
     "eslint-plugin-svelte": "^2.27.3",
     "eslint-plugin-svelte3": "^4.0.0",
     "gh-pages": "^5.0.0",
     "prettier": "2.8.8",
     "prettier-plugin-svelte": "^2.9.0",
+    "rgb-hex": "^4.0.1",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
